--- a/src/main/resources/templates/resetPasswordEmailTemplate.html
+++ b/src/main/resources/templates/resetPasswordEmailTemplate.html
@@ -9,9 +9,12 @@
 <body style="background: #26a69a; padding: 30px; margin: 0px; color: #ffffff">
 <div style="width: 700px;">
 <div style="width: 100%; margin: 0 auto;">
-    <h1 style="font-weight: normal">Witamy w <span style="font-weight: bold">Aport</span>Me!</h1>
-    <p>Z nami znajdziesz swojego czworonożnego przyjaciela w mgnieniu oka!</p>
-    <button style="border: 5px solid #FFFFFF; cursor: pointer; background: none; padding: 8px 12px; font-weight: bold; text-transform: uppercase;"><a style="color: white; text-decoration: none;" th:href="${activationLink}" target="_blank">Aktywuj konto</a></button>
+    <h1 style="font-weight: normal">Reset hasła w <span style="font-weight: bold">Aport</span>Me!</h1>
+    <p>W celu zmiany hasła kliknij w przycisk poniżej.</p>
+    <button style="border: 5px solid #FFFFFF; cursor: pointer; background: none; padding: 8px 12px; font-weight: bold; text-transform: uppercase;"><a style="color: white; text-decoration: none;" th:href="${confirmationUrl}" target="_blank">Ustaw nowe hasło</a></button>
+    <p>Pozdrawiamy! Zespół AportMe</p>
+    <br />
+    <p>Jeśli to nie ty zmieniasz hasło, prosimy o usunięcie tej wiadomości.</p>
 </div>
 </div>
 <div style="width: 100%; height: 20px;"></div>
